[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Police guard.png/11.png" type="Texture" id=1]
[ext_resource path="res://Src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Src/Mechs/ScreenShake.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Police guard.png/19.png" type="Texture" id=4]
[ext_resource path="res://Assets/Police guard.png/12.png" type="Texture" id=5]
[ext_resource path="res://Src/Weapons/Pistol.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Police guard.png/2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Police guard.png/20.png" type="Texture" id=8]
[ext_resource path="res://Assets/Police guard.png/0.png" type="Texture" id=9]
[ext_resource path="res://Assets/Police guard.png/1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Police guard.png/3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Police guard.png/21.png" type="Texture" id=12]
[ext_resource path="res://Assets/Police guard.png/22.png" type="Texture" id=13]
[ext_resource path="res://Assets/Police guard.png/13.png" type="Texture" id=14]
[ext_resource path="res://Assets/Police guard.png/23.png" type="Texture" id=15]
[ext_resource path="res://Src/Weapons/Ak47.tscn" type="PackedScene" id=16]
[ext_resource path="res://Src/Weapons/ShotGun.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/Music and sfx/jump sfx.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/Music and sfx/hit sfx.wav" type="AudioStream" id=19]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 5.96799

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 16
corner_radius_bottom_right = 16

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": false,
"name": "bomb_death",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 8 ), ExtResource( 15 ) ],
"loop": false,
"name": "electric_death",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 12 ), ExtResource( 13 ), null ],
"loop": false,
"name": "fall_pit_or_glass",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
scale = Vector2( 1.5, 1.5 )
collision_layer = 2
script = ExtResource( 2 )
gravity = 400
jump_force = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.875 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 115, -44 )
current = true
smoothing_speed = 10.0

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 3 )]
amplitude = 3

[node name="HudLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HpBar" type="Panel" parent="HudLayer"]
modulate = Color( 0.976471, 0.00392157, 0.00392157, 1 )
margin_top = 4.0
margin_right = 26.0
margin_bottom = 15.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpBar2" type="Panel" parent="HudLayer"]
modulate = Color( 0.976471, 0.00392157, 0.00392157, 1 )
margin_left = 26.0
margin_top = 4.0
margin_right = 52.0
margin_bottom = 15.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpBar3" type="Panel" parent="HudLayer"]
modulate = Color( 0.988235, 0.00784314, 0.00784314, 1 )
margin_left = 52.0
margin_top = 4.0
margin_right = 78.0
margin_bottom = 15.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="HitSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 6.058

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "hit"
frame = 1
playing = true

[node name="Weapons" type="Node2D" parent="."]
position = Vector2( -1, 1 )
scale = Vector2( 0.8, 0.8 )

[node name="Pistol" parent="Weapons" instance=ExtResource( 6 )]
visible = false
position = Vector2( 2.98023e-08, -2.98023e-08 )

[node name="Ak47" parent="Weapons" instance=ExtResource( 16 )]
visible = false
position = Vector2( 1.25, 1.25 )
scale = Vector2( 0.5, 0.5 )

[node name="ShotGun" parent="Weapons" instance=ExtResource( 17 )]
visible = false
position = Vector2( 0.416667, 3.75 )
scale = Vector2( 0.5, 0.5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
